# Hi-Voicer

./: README.md  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: 0.2.1-打包测试清单.md  模型说明.md  环境准备.md
scripts/: check-env.ps1  setup-windows.ps1
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: THIRD-PARTY-NOTICES.md
src-tauri/src/: config.rs  lib.rs  main.rs
src/__tests__/: diagnostics-page.test.tsx  hotwords-page.test.tsx  model-presets.test.ts  settings-page.test.tsx  settings.test.ts
src/data/: mockState.ts  modelPresets.ts
src/lib/: api.ts
src/pages/: DiagnosticsPage.tsx  HotwordsPage.tsx  SettingsPage.tsx
