[package]
name = "hi-voicer"
version = "0.1.0"
description = "Offline Chinese voice input and transcription desktop app"
authors = ["Hi-Voicer"]
edition = "2021"

[lib]
name = "hi_voicer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
rfd = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
zip = "2"
